fix video width overflow

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,6 +4,11 @@
   display: none !important;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+}
+
 body.dark .os-viewport {
   background-color: rgba(0, 0, 0, 0.6);
 }
